# FrontHypeS

./: .gitignore  Cargo.toml  README.md  env_example.sh
dashboard/: .env.example  README.md  docker-compose.yml  package-lock.json  rmnewfonrt.md  start-docker.bat  start-docker.sh
dashboard/backend/: .dockerignore  AuthSystemGuide.md  Dockerfile  README.md  auth.py  hyperliquid-tokens.js  package-lock.json  package.json  server.js  wallet.json
dashboard/frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
dashboard/frontend/src/: App.jsx  index.css
dashboard/frontend/src/components/: ActivitySection.jsx  AddWalletModal.jsx  AddWalletModal_Unified.jsx  ExecutorSection.jsx  LiquidWalletSection.jsx  LoginPage.jsx  PerformanceSection.jsx  TagFilter.jsx  TokenContractsModal.jsx  TokenSelector.jsx  TransactionsModal.jsx  VaultSection.jsx  VaultSection_Unified.jsx  VaultSettingsModal.jsx  WalletWidget.jsx  WalletWidgetLine.jsx  WalletsManagement.jsx
python/: eth_call.py  main2.py  main2.rs
src/: cargo_toml.txt  config.rs  main.rs  main_rs.rs  pricing_dex.rs
src/pricing/: dex.rs  gas_monitor.rs  hyperliquid.rs  mod.rs  types.rs
