[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"

# Ethereum
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy-primitives = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Hyperliquid REST fallback
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math for V3 calculations
num-bigint = "0.4"
num-traits = "0.2"

# Config
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
